2007-11-29  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/ViewManager.py: use PluginsWindows
	* src/PluginUtils/_PluginStatus.py: moved from
	* src/PluginUtils/_PluginWindows.py: moved to
	* src/PluginUtils/__init__.py: use PluginsWindows
	* src/PluginUtils/_Plugins.py: use PluginsWindows

2007-11-28  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/PluginUtils/_MenuOptions.py: added comments
	* src/PluginUtils/_PluginStatus.py: added ToolManagedWindowBatch

2007-11-28 Jim Sack <jgsack@san.rr.com>
        * src/GrampsDb/_ReadGedcom.py : remove trail whitespace (readahead)
        fixes (possible) discarded reference due to bogus handles that get created
        when the reference looks like "@REF_ID@ " (note space after)
	This is a forward-port of the 2.2.x fix for issue #1399

2007-11-28  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/ReportBase/Makefile.am: removed _MenuOptions.py
	* src/PluginUtils/Makefile.am: added _MenuOptions.py

2007-11-28  Douglas S.Blank  <dblank@cs.brynmawr.edu>
	* src/ReportBase/_MenuOptions.py: removed/moved to PluginUtils
	* src/ReportBase/__init__.py: removed Menu items
	* src/plugins/Calendar.py: uses MenuReportOptions
	* src/plugins/DescendChart.py: uses MenuReportOptions
	* src/plugins/AncestorChart.py: uses MenuReportOptions
	* src/plugins/GVHourGlass.py: uses MenuReportOptions
	* src/plugins/FanChart.py: uses MenuReportOptions
	* src/PluginUtils/__init__.py: imports Menu items

2007-11-28  Douglas S.Blank  <dblank@cs.brynmawr.edu>
	* src/ReportBase/_MenuOptions.py: removed global need for gtk here

2007-11-28 Benny Malengier <benny.malengier@gramps-project.org>
	* example/gramps/example.gramps: correct 3.0 example.gramps, stext is
	no longer used, xml no longer sorted on id on ouput.
	* src/gen/db/base.py: remove test code from Don

2007-11-27 Benny Malengier <benny.malengier@gramps-project.org>
	* src/glade/gramps.glade: remove internal from addmedia
	* src/AddMedia.py: remove internal